<resources>
    <string name="app_name">Comuginator</string>
    <string name="back">← Back</string>
    <string name="add">+ Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="close">Close</string>
    <string name="history">History</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="saving">Saving&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="home">Home</string>
    <string name="child_home">Child Home</string>
    <string name="child_home_delete_node_title">Delete node?</string>
    <string name="child_home_node_type_title">Node type</string>
    <string name="child_home_create_failed">Create failed: %1$s</string>
    <string name="child_home_update_failed">Update failed: %1$s</string>
    <string name="child_home_delete_failed">Delete failed: %1$s</string>
    <string name="child_home_load_failed">Failed to load child home: %1$s</string>
    <string name="child_home_send_failed">Failed to send request: %1$s</string>
    <string name="sent">Sent</string>
    <string name="message">Message</string>
    <string name="incoming_message">Incoming message</string>
    <string name="from">From:</string>
    <string name="suggested_replies">Suggested replies</string>
    <string name="current_reply">Current reply</string>
    <string name="no_reply_yet">No reply yet</string>
    <string name="repeat">Repeat</string>
    <string name="send_to_name">Send to %1$s</string>
    <string name="add_full_library_set">Add full Library set</string>
    <string name="choose_set">Choose set</string>
    <string name="no_library_sets">No library sets</string>
    <string name="set_is_empty">Set is empty</string>
    <plurals name="added_items">
        <item quantity="one">Added %d item</item>
        <item quantity="other">Added %d items</item>
    </plurals>
    <string name="load_sets_failed">Load sets failed: %1$s</string>
    <string name="family_title_placeholder">Family -</string>
    <string name="invite_placeholder">Invite: -</string>
    <string name="status_placeholder">Status: -</string>
    <string name="device_name">Device name</string>
    <string name="user_name">User name</string>
    <string name="volume">Volume</string>
    <string name="battery_meta_placeholder">Battery / charging / lastSeen</string>
    <string name="rename">Rename</string>
    <string name="avatar">Avatar</string>
    <string name="charging">charging</string>
    <string name="not_charging">not charging</string>
    <string name="charging_unknown">charging?</string>
    <string name="device_meta">Battery: %1$s · %2$s · Volume: %3$s · Last seen: %4$s</string>
    <string name="create_set">Create set</string>
    <string name="set_name">Set name</string>
    <string name="rename_set">Rename</string>
    <string name="delete_set">Delete set</string>
    <string name="add_photo">Add photo</string>
    <string name="add_arasaac">Add ARASAAC</string>
    <string name="change_cover">Change cover</string>
    <plurals name="items_count">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="library_item_picker">Library item picker</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo_from_device">Choose photo from device</string>
    <string name="search_arasaac">Search ARASAAC</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="save_and_use">Save and use</string>
    <string name="search_by_label">Search by label</string>
    <string name="title">Title</string>
    <string name="next">Next</string>
    <string name="already_have_family">Do you already have a family group?</string>
    <string name="create_family_group">Create family group</string>
    <string name="join_family_group">Join family group</string>
    <string name="invite_code">Invite code</string>
    <string name="join">Join</string>
    <string name="open_incoming_fullscreen">Open incoming messages fullscreen</string>
    <string name="status">Status</string>
    <string name="fullscreen_permission_explanation">When enabled, incoming messages may open over other apps or the lock screen. Android may require an additional system permission.</string>
    <string name="open_system_fullscreen_permission">Open system fullscreen permission</string>
    <string name="item">Item</string>
    <string name="card">Card</string>
    <string name="family_photo">FAMILY_PHOTO</string>
    <string name="more">⋮</string>
    <string name="plus">+</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="user_header">%1$s [%2$s]</string>
    <string name="new_message">New message</string>
    <string name="new_reply">New reply</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="system_setting_only_newer_android">This setting is only needed on newer Android versions</string>
    <string name="could_not_open_system_settings">Could not open system settings</string>
    <string name="loading_library">Loading library&#8230;</string>
    <string name="load_library_failed">Load library failed: %1$s</string>
    <string name="clipboard_unavailable">Clipboard is unavailable</string>
    <string name="clipboard_empty">Clipboard is empty</string>
    <string name="clipboard_text_not_supported">Clipboard text is not supported yet</string>
    <string name="no_image_in_clipboard">No image found in clipboard</string>
    <string name="all_sets">(all sets)</string>
    <string name="searching_arasaac">Searching ARASAAC&#8230;</string>
    <string name="nothing_found">Nothing found</string>
    <string name="choose_arasaac_card">Choose ARASAAC card</string>
    <string name="arasaac_search_failed">ARASAAC search failed: %1$s</string>
    <string name="label_required">Label is required</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="save_failed">Save failed: %1$s</string>
    <string name="failed_with_message">Failed: %1$s</string>
    <string name="changing_cover">Changing cover&#8230;</string>
    <string name="renaming">Renaming&#8230;</string>
    <string name="deleting_set">Deleting set&#8230;</string>
    <string name="deleting_item">Deleting item&#8230;</string>
    <string name="adding_item">Adding item&#8230;</string>
    <string name="failed_to_load_message">Failed to message: %1$s</string>
    <string name="rename_user">Rename user</string>
    <string name="rename_device">Rename device</string>
    <string name="role_parent">Adult</string>
    <string name="role_child">Child</string>
    <string name="refresh">Refresh</string>
    <string name="send_heartbeat">Send heartbeat</string>
    <string name="rename_family">Rename family</string>
    <string name="updating_family_name">Updating family name&#8230;</string>
    <string name="family_name_updated">Family name updated</string>
    <string name="update_family_failed">Update family failed: %1$s</string>
    <string name="updating_user_name">Updating user name&#8230;</string>
    <string name="user_name_updated">User name updated</string>
    <string name="update_user_failed">Update user failed: %1$s</string>
    <string name="updating_device_name">Updating device name&#8230;</string>
    <string name="device_name_updated">Device name updated</string>
    <string name="update_device_failed">Update device failed: %1$s</string>
    <string name="loading_family">Loading family&#8230;</string>
    <string name="family_loaded">Family loaded</string>
    <string name="load_family_failed">Load family failed: %1$s</string>
    <string name="creating_invite">Creating %1$s invite&#8230;</string>
    <string name="invite_code_result">Invite code: %1$s</string>
    <string name="role_result">Role: %1$s</string>
    <string name="expires_result">Expires: %1$s</string>
    <string name="invite_created">Invite created</string>
    <string name="create_invite_failed">Create invite failed: %1$s</string>
    <string name="no_name">(no name)</string>
    <string name="family_prefix">Family: %1$s</string>
    <string name="sending_volume_command">Sending volume command&#8230;</string>
    <string name="volume_command_sent">Volume command sent: %1$d</string>
    <string name="failed_send_volume_command">Failed to send volume command: %1$s</string>
    <string name="updating_avatar">Updating avatar&#8230;</string>
    <string name="avatar_updated">Avatar updated</string>
    <string name="update_avatar_failed">Update avatar failed: %1$s</string>
    <string name="volume_value">Volume: %1$d%%</string>
    <string name="set_volume">Set volume:</string>
    <string name="created_at">Created: %1$s</string>
    <string name="reply_prefix">Reply: %1$s</string>
    <string name="reply_not_available">Reply is not available yet</string>
    <string name="reply_from">Reply from %1$s</string>
    <string name="reply_sent">Reply sent</string>
    <string name="failed_send_reply">Failed to send reply: %1$s</string>
    <plurals name="schedule_items_count">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="sets_count">
        <item quantity="one">%d set</item>
        <item quantity="other">%d sets</item>
    </plurals>
    <string name="new_set">New set</string>
    <string name="choose_user_avatar">Choose user avatar</string>
    <string name="choose_set_cover">Choose set cover</string>
    <string name="add_item_to_set">Add item to set</string>
    <string name="photo_number">Photo %1$s</string>
    <string name="user_name_required">User name is required</string>
    <string name="device_name_required">Device name is required</string>
    <string name="choose_create_or_join">Choose: create family group or join family group</string>
    <string name="family_name">Family name</string>
    <string name="create_family">Create family</string>
    <string name="enter_family_name">Enter family name</string>
    <string name="creating_family">Creating family&#8230;</string>
    <string name="language">Language</string>
    <string name="compose_mode">Mode</string>
    <string name="compose_mode_normal">Question</string>
    <string name="compose_mode_sequence">Sequence</string>
    <string name="compose_no_replies">No reply options selected</string>
    <string name="send_message">Send</string>
    <string name="multiple_replies">Multiple replies</string>
    <string name="name">Name</string>
    <string name="force_show_nodes">Show nodes</string>
    <string name="force_hide_nodes">Hide nodes</string>
    <string name="notifications">Notifications</string>
    <string name="notification_schedule">Notification schedule</string>
    <string name="notification_sound">Notification sound</string>
    <string name="add_rule">Add rule</string>
    <string name="notifications_action_enable">Turn notifications on</string>
    <string name="notifications_action_disable">Turn notifications off</string>
    <string name="weekday_mon">Mon</string>
    <string name="weekday_tue">Tue</string>
    <string name="weekday_wed">Wed</string>
    <string name="weekday_thu">Thu</string>
    <string name="weekday_fri">Fri</string>
    <string name="weekday_sat">Sat</string>
    <string name="weekday_sun">Sun</string>
    <string name="exact_date">Exact date</string>
    <string name="day_of_week">Day of week</string>
</resources>